--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
+    "http-server": "^0.12.3",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1"
   }
